--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,11 @@ jobs:
         with:
           node-version: '14'
 
+      - name: "Setup node"
+        uses: actions/checkout@v2
+        with:
+          node-version: '14'
+
       - name: "Install dependencies"
         run: npm install
 
