--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,3 +27,6 @@ jobs:
       - name: "Build app"
         run: npm run build
 
+      - name: "Run tests"
+        run: npm run test --no-watch --no-progress --browsers-ChromeHeadlessCI
+
