--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
         run: npm run build
 
       - name: "Run tests"
-        run: npm run test --no-watch --no-progress --browsers-ChromeHeadlessCI
+        run: npm run test -- --no-watch --no-progress --browsers-ChromeHeadlessCI
 
