--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Init repository"
+      - name: "init repository"
         uses: actions/checkout@v2
-        with:
-          node-version: '14'
 
       - name: "Setup node"
         uses: actions/checkout@v2
@@ -30,3 +28,9 @@ jobs:
       - name: "Run tests"
         run: npm run test -- --no-watch --no-progress --browsers-ChromeHeadlessCI
 
+      - name: "Deploy to Heroku"
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
