--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,22 +14,22 @@ jobs:
       - name: "init repository"
         uses: actions/checkout@v2
 
-      - name: "Setup node"
-        uses: actions/checkout@v2
+      - name: "Setup Node"
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
-
+      
       - name: "Install dependencies"
         run: npm install
-
+        
       - name: "Build app"
-        run: npm run build
+        run: npm run build  
 
       - name: "Run tests"
-        run: npm run test -- --no-watch --no-progress --browsers-ChromeHeadlessCI
-
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      
       - name: "Deploy to Heroku"
-      - uses: akhileshns/heroku-deploy@v3.12.12
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP}}
