--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,25 @@ jobs:
         run: npm install
         
       - name: "Build app"
-        run: npm run build  
+        run: npm run build
 
-      - name: "Run tests"
-        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      # - name: "Run tests"
+      #   run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       
-      - name: "Deploy to Heroku"
-        uses: akhileshns/heroku-deploy@v3.12.12
+      - name: "install ruby"
+        uses: ruby/setup-ruby@v1
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          ruby-version: 2.7
+
+      - name: "Install DPL"
+        run: gem install dpl
+
+      - name: "Deploy to Heroku"
+        run: dpl --provider-heroku --app-${{secrets.HEROKU_APP}} --api-key-{{secrets.HEROKU_API_KEY}} --skip_cleanup=true
+
+      # - name: "Deploy to Heroku"
+      #   uses: akhileshns/heroku-deploy@v3.12.12
+      #   with:
+      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      #     heroku_app_name: ${{secrets.HEROKU_APP}}
+      #     heroku_email: ${{secrets.HEROKU_EMAIL}}
