--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: gem install dpl
 
       - name: "Deploy to Heroku"
-        run: dpl --provider-heroku --app-${{secrets.HEROKU_APP}} --api-key-{{secrets.HEROKU_API_KEY}} --skip_cleanup=true
+        run: dpl --provider-heroku --app=${{secrets.HEROKU_APP}} --api-key={{secrets.HEROKU_API_KEY}} --skip_cleanup=true
 
 
 
