--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      
+
       - name: "Install dependencies"
         run: npm install
-        
+
       - name: "Build app"
         run: npm run build
-      
-      - name: "install ruby"
+
+      - name: "Run tests"
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+
+      - name: "Install ruby"
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
@@ -34,14 +37,4 @@ jobs:
         run: gem install dpl
 
       - name: "Deploy to Heroku"
-        run: dpl --provider-heroku --app=${{secrets.HEROKU_APP}} --api-key={{secrets.HEROKU_API_KEY}} --skip_cleanup=true
-
-
-
-
-      # - name: "Deploy to Heroku"
-      #   uses: akhileshns/heroku-deploy@v3.12.12
-      #   with:
-      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #     heroku_app_name: ${{secrets.HEROKU_APP}}
-      #     heroku_email: ${{secrets.HEROKU_EMAIL}}
+        run: dpl --provider=heroku --app=${{secrets.HEROKU_APP}} --api-key=${{secrets.HEROKU_API_KEY}} --skip_cleanup=true
